--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 streamlit>=1.33.0
-langchain>=0.2.0
-langchain-groq>=0.1.0
-langchain-community>=0.2.0
+langchain==0.2.6
+langchain-core==0.2.10
+langchain-community==0.2.6
+langchain-groq==0.1.6
 langchain-huggingface
-langchain-core>=0.2.0
 faiss-cpu
 pydantic
 python-dotenv
